styles.css
@import url("https://fonts.googleapis.com/css?family=Khula&display=swap");

* {
  box-sizing: border-box;
}

body {
  color: #fff;
  font-family: "Khula", sans-serif;
  height: 100vh;
  overflow: hidden;
  margin: 0;
  text-align: center;
}

a {
  color: #fff;
  text-decoration: none;
}

a:hover {
  color: #16d9e3;
}

.start {
  font-size: 1.5rem;
}

h1 {
  line-height: 1.4;
  font-size: 4rem;
}

.screen {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
  width: 100vw;
  transition: margin 0.5s ease-out;
  background: linear-gradient(90deg, #29323c 0%, #485563 100%);
}

.screen.up {
  margin-top: -100vh;
}

.time-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  list-style: none;
  padding: 0;
}

.time-list li {
  margin: 10px;
}

.time-btn,
.size-btn {
  background-color: transparent;
  border: 2px solid #c0c0c0;
  color: #fff;
  cursor: pointer;
  font-family: inherit;
  padding: 0.5rem 1rem;
  font-size: 1.5rem;
}

.time-btn:hover,
.size-btn:hover {
  border: 2px solid #16d9e3;
  color: #16d9e3;
}

.hide {
  opacity: 0;
}

.primary {
  color: #16d9e3;
}

.board {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  width: 500px;
  height: 500px;
  background: linear-gradient(118.38deg, #29323c -4.6%, #485563 200.44%);
  box-shadow: -8px -8px 20px #2a333d, 10px 7px 20px #475462;
  border-radius: 30px;
  overflow: hidden;
}

.circle {
  background: linear-gradient(90deg, #16d9e3 0%, #30c7ec 47%, #46aef7 100%);
  position: absolute;
  border-radius: 50%;
  cursor: pointer;
}

